fixing high score spacing

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ html {
     font-size: 1.5rem;
     margin-right: 15%;
     float: right;
-    margin-top: -30%
+    margin-top: -25rem;
 }
 
 #start-button, #reset, #diff-toggle {
